# DEASLA

./: .env  .gitignore  DEASLA.sln  README.md  build-alert-management.sh  build-and-push-all.sh  build-core.sh  build-delivery-logging.sh  build-external.sh  build-notification.sh  build-report.sh  docker-compose.yml
.github/workflows/: blank.yml  docker-build-push.yml  docker-image-build.yml  test.yml
docker-gateway/: docker-compose.yml  dockerfile  nginx.conf
docker-infra/: .env  docker-compose.yml
docker-kafka/: docker-compose.yml
docker-monitoring/: docker-compose.yml
domains/: README.md
domains/core/: README.md
domains/report/audit-trail/: .env  Cargo.toml  Dockerfile  README.md  openapi.yaml
domains/report/audit-trail/.github/workflows/: test.yml
domains/report/audit-trail/src/: db.rs  handler.rs  main.rs  model.rs  service.rs
domains/report/audit-trail/test/: integration_test.rs  test_dummy.py
domains/report/metrics-collector/: .env  Cargo.toml  Dockerfile  README.md  openpai.yaml
domains/report/metrics-collector/.github/workflows/: ci.yml  test.yml
domains/report/metrics-collector/src/: handler.rs  main.rs  model.rs  service.rs
domains/report/metrics-collector/tests/: integration_test.rs  test_dummy.py
domains/report/report-generator/: .env  Cargo.toml  Dockerfile  README.md  openapi.yaml
domains/report/report-generator/.github/workflows/: ci.yml  test.yml
domains/report/report-generator/src/: db.rs  handler.rs  hanler.rs  main.rs  model.rs  service.rs
domains/report/report-generator/tests/: integration_test.rs
domains/report/stat-analyzer/: .env  Cargo.toml  Dockerfile  README.md  openapi.yaml
domains/report/stat-analyzer/.github/workflows/: test.yml
domains/report/stat-analyzer/src/: db.rs  handler.rs  main.rs  metrics.rs  model.rs  service.rs
domains/report/stat-analyzer/tests/: integration_test.rs  test_dummy.py
(+439 files in other folders)
