[package]
name = "metrics-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2", default-features = false, features = ["tokio-runtime"] }
bson = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
